<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by_popular">Sort by popular</string>
    <string name="sort_by_top_rated">Sort by top rated</string>
    <string name="sort_by_favorites">Favorites</string>
    <string name="no_pages_to_show">No more pages to show</string>
    <string name="error_loading">An error occurred. Check your internet connection and try again.</string>
    <string name="cd_error_loading">An error occurred. Check your internet connection and try again.</string>
    <string name="label_synopsis">Synopsis:</string>
    <string name="label_user_rating">User Rating:</string>
    <string name="label_release_date">Release Date:</string>
    <string name="cd_title">Movie title</string>
    <string name="cd_image">Trailer image</string>
    <string name="menu_next">Next</string>
    <string name="menu_back">Back</string>
    <string name="favorite_button">Favorite</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>
    <string name="post_auhtor">%1$s says:</string>

</resources>
