<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_back"
        android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:title="@string/menu_back"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:title="@string/menu_next"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort_popular"
        android:title="@string/sort_by_popular"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_sort_top_rated"
        android:title="@string/sort_by_top_rated"
        app:showAsAction="never"/>


</menu>